plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/projectIsolation/jvmAndKapt/module1/src/main/kotlin/Dependency.kt
import javax.inject.Inject

class Dependency @Inject <!LINE_MARKER("descr='Dependency() provides for Module1'")!>constructor<!>() {
    fun provideInfo(): String = "I'm a dependency!"
}
